ui/src/styles/globals.css
@import url('./fonts/montsrrat.css');
@import url('./fonts/inter.css');

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    ::selection {
        @apply bg-grey-800 text-grey-100 dark:bg-teal-500;
    }
    .scrollbar::-webkit-scrollbar {
        @apply h-2 w-0 rounded-lg bg-transparent;
    }
    .scrollbar::-webkit-scrollbar-thumb {
        @apply w-3 rounded-lg bg-teal-500;
    }
    .scrollbar-vert::-webkit-scrollbar {
        @apply w-2 rounded-lg bg-transparent;
    }
    .scrollbar-vert::-webkit-scrollbar-thumb {
        @apply rounded-lg bg-teal-500;
    }

    /* Atlassian codeblock on documentation page */
    .jisc-code-block > span {
        @apply !max-h-96 !overflow-y-scroll rounded-t-none border-2 border-t-0 border-solid border-teal-200 bg-grey-50 !transition-colors !duration-500 dark:border-grey-600 dark:bg-grey-700;
    }
    .jisc-code-block code {
        @apply !px-3;
    }

    .custom-table table {
        @apply table-fixed;
    }
    .custom-table tr:nth-child(event) {
        @apply bg-white-50 dark:bg-grey-800;
    }
    .custom-table tr:nth-child(odd) {
        @apply bg-grey-50 dark:bg-grey-900;
    }
    .custom-table th,
    .custom-table td {
        @apply border border-teal-500 px-1 py-0 lg:px-2;
    }

    /* Defined separately as the custom table was casuing errors on
    tiptap editors tables */
    .custom-table-tiptap-editor table {
        @apply table-fixed;
    }
    .custom-table-tiptap-editor tr:nth-child(event) {
        @apply bg-white-50;
    }
    .custom-table-tiptap-editor tr:nth-child(odd) {
        @apply bg-grey-50;
    }
    .custom-table-tiptap-editor th,
    .custom-table-tiptap-editor td {
        @apply border border-teal-500 px-1 py-0 lg:px-2;
    }
}

@layer components {
    [type='text'],
    [type='email'],
    [type='url'],
    [type='password'],
    [type='number'],
    [type='date'],
    [type='datetime-local'],
    [type='month'],
    [type='search'],
    [type='tel'],
    [type='time'],
    [type='week'],
    textarea,
    select,
    select[multiple],
    [type='checkbox'],
    [type='radio'] {
        @apply focus:border-grey-100;
    }
}

@layer utilities {
    .arrow-clip {
        clip-path: polygon(100% 0, 0 0, 50% 100%);
    }
}

/* SVG logo */
.cls-1-dark {
    fill: #fff;
}
.cls-2-dark {
    fill: #1e232d;
}
.cls-3-dark {
    fill: #348cb2;
}
.cls-4-dark {
    fill: #4ea6cc;
}

.cls-1-light {
    fill: #fff;
}
.cls-2-light {
    fill: #1e232d;
}
.cls-3-light {
    fill: #1f4e63;
}
.cls-4-light {
    fill: #4ea6cc;
}

